src/components/blocks/venue-info/_venue-info.scss
@use "../../mixins";

.b-carousel {
  --template-width: 1200px;
  --items-offset: 0;
  --transition-speed: 0.5s;

  margin-bottom: 10px;

  @include mixins.breakpoints-bpMinSmall {
    margin-bottom: 20px;
  }

  &__ctrls {
    display: none;

    &--active {
      @include mixins.breakpoints-bpMinSmall {
        display: flex;
        gap: 6px;
        justify-content: flex-end;
        margin: auto;
        max-width: var(--template-width);
      }
    }
  }

  &__viewport {
    overflow: hidden;

    @include mixins.breakpoints-bpMinLarge {
      margin-left: calc((var(--template-width) - 100vw) / 2);
      padding-left: calc((100vw - var(--template-width)) / 2);
      width: 100vw;
    }
  }

  &__list {
    display: flex;
    gap: 10px;
    transform: translateX(var(--items-offset));
    transition: transform var(--transition-speed) ease;

    @include mixins.breakpoints-bpMinSmall {
      gap: 30px;
    }
  }

  &__item {
    display: flex;
    flex: 0 0 79%;
    flex-direction: column;
    gap: 10px;
    scroll-snap-align: center;
    scroll-snap-stop: normal;

    @include mixins.breakpoints-bpMinSmall {
      flex-basis: 87%;
      gap: 20px;
    }

    @media (width >= 1400px) {
      flex-basis: var(--template-width);
    }

    &#{&}:focus {
      box-shadow: none;
    }
  }
}

